# test-claude

./: .gitignore  CLAUDE.md  CONTEXT.md  README.md  package-lock.json  package.json
.sandcastle/: main.mts  prompt.md
backend/: database.py  main.py  pyproject.toml  repository.py
backend/tests/: conftest.py  test_repository.py  test_router.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/app/: page.tsx
frontend/src/components/: TaskForm.test.tsx  TaskForm.tsx  TaskItem.test.tsx  TaskItem.tsx  TaskList.test.tsx  TaskList.tsx
frontend/src/lib/: apiClient.test.ts  apiClient.ts  pickRandomPending.test.ts  pickRandomPending.ts
frontend/src/test/: server.ts
